Fix video height, add larger grid gap in larger vp

--- a/stylesheets/generic/base.scss
+++ b/stylesheets/generic/base.scss
@@ -86,6 +86,7 @@ img::-moz-selection {
 }
 
 :where(video) {
+  display: block;
   height: auto;
   width: 100%;
 }
